issue 4: fix tooltip visibility in fullscreen mode

--- a/pt/web/firebird/src/scss/styles.scss
+++ b/pt/web/firebird/src/scss/styles.scss
@@ -247,9 +247,19 @@ button:hover i.border-dark {
   border-color: #fff !important;
 }
 
+//tooltip styles
+
 .tooltip {
   --bs-tooltip-bg: var(--color-primary-700);
   --bs-tooltip-opacity: 1;
+}
+
+// when you append a tooltip to a button group, bootstrap styling makes the border radius look 
+// weird at the end of the button group because it thinks there's another element in the group 
+// (because technically there is, but it isn't a button!)
+.btn-group[aria-label='Pagination'] button:nth-child(4) {
+  border-bottom-right-radius: .375rem !important;
+  border-top-right-radius: .375rem !important;
 }
 
 .tippy-box[data-theme~='pt'] {
